no_font_weight_change

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="B">
-      <h1><img src="/images/Vector.png" alt="warning_icon" />Attention!</h1>
-      <div><h1>Site glissant</h1></div>
+    <div>
+      <div class="B">
+        <h1><img src="/images/Vector.png" alt="warning_icon" />Attention!</h1>
+      </div>
+      <h1>Site glissant</h1>
       <p>Ne scrolle pas trop vite.</p>
     </div>
   </body>
