--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   </head>
   <body>
     <div>
-      <div class="B">
-        <h1><img src="/images/Vector.png" alt="warning_icon" />Attention!</h1>
-      </div>
-      <h1>Site glissant</h1>
-      <p>Ne scrolle pas trop vite.</p>
+      <img src="/images/Vector.png" alt="warning_icon" />
+      <div class="A"><h1>Attention!</h1></div>
+      <div class="B"><h1>Site glissant</h1></div>
+      <div><h2>Ne scrollez pas trop vite.</h2></div>
     </div>
   </body>
 </html>
